# dispersion

./: .gitignore  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml  lint.yml  publish.yml
pyscf/dispersion/: dftd3.py  dftd4.py  gcp.py
pyscf/dispersion/tests/: test_d3.py  test_d4.py  test_gcp.py
pyscf/lib/: CMakeLists.txt  libdftd4.so.3  libdftd4.so.3.6.0  libdftd4.so.3.7.0  libs-dftd3.so.1  libs-dftd3.so.1.0.0  libs-dftd3.so.1.2.1
pyscf/lib/cmake/dftd4/: dftd4-config-version.cmake  dftd4-config.cmake  dftd4-targets-relwithdebinfo.cmake  dftd4-targets.cmake
pyscf/lib/cmake/s-dftd3/: s-dftd3-config-version.cmake  s-dftd3-config.cmake  s-dftd3-targets-relwithdebinfo.cmake  s-dftd3-targets.cmake
pyscf/lib/pkgconfig/: dftd4.pc  s-dftd3.pc
